--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -32,6 +32,7 @@ figure {
 img {
 	height: auto;
 	max-width: 100%;
+	display: block;
 	/*
 	@include animation(img-loader $transition-small-duration $element-enter-transition);
 
