--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -25,13 +25,15 @@
 @import 'components/chips'; // Used to style chips (can be turned off)
 @import 'components/dialogs'; // Used to style dialog (can be turned off)
 @import 'components/drawer'; // Navigation drawer (can be turned off)
-//@import 'components/navigation-drawer'; // Navigation drawer (can be turned off)
-@import 'components/lists'; // Lists (can be turned off)
+//@import 'components/navigation-drawer'; // Used to style navigation drawer (can be turned off)
+@import 'components/lists'; // Used to style lists (can be turned off)
 @import 'components/notifications'; // Notifications style (can be turned off)
+@import 'components/pickers'; // Used to style date and time picker (can be turned off)
 @import 'components/progress'; // Used to style progress and activity indicators (can be turned off)
 @import 'components/selection'; // Used to style selection controls (checkbox, radio button, switch) (can be turned off)
 @import 'components/sliders'; // Used to style sliders (can be turned off)
 @import 'components/snackbars'; // Used to style snackbars and toasts (can be turned off)
+@import 'components/steppers'; // Used to style steppers (can be turned off)
 @import 'components/tables'; // Used to style tables (can be turned off)
 @import 'components/tabs'; // Used to style tabs (can be turned off)
 @import 'components/textfields'; // Used to style input (can be turned off)
