--- a/stylesheets/scss/components/_steppers.scss
+++ b/stylesheets/scss/components/_steppers.scss
@@ -7,7 +7,23 @@
 .sc-stepper {
 	&-horizontal {
 		li {
+			height: rem-calc(72px);
 			float: left;
+			padding: rem-calc(24px) 0 rem-calc(24px) rem-calc(24px);
+		}
+
+		.sc-step-circle {
+			margin: 0 rem-calc(12px) 0 0;
+		}
+	}
+
+	&-vertical {
+		li {
+			padding: 0 0 0 rem-calc(24px);
+		}
+
+		.sc-step-circle {
+			margin: 0 rem-calc(8px) 0 0;
 		}
 	}
 }
