--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -24,6 +24,7 @@
 @import 'components/cards'; // Used to style cards (can be turned off)
 @import 'components/chips'; // Used to style chips (can be turned off)
 @import 'components/dialogs'; // Used to style dialog (can be turned off)
+@import 'components/expansion-panels'; // Used to style expansion panels (can be turned off)
 @import 'components/drawer'; // Navigation drawer (can be turned off)
 //@import 'components/navigation-drawer'; // Used to style navigation drawer (can be turned off)
 @import 'components/lists'; // Used to style lists (can be turned off)
