Changed keywords, optimised tables, changed navigation drawer

--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -138,3 +138,7 @@ main {
 	background: if( $theme == light, rgba($black, .12), rgba($white, .12) );
 	height: rem-calc(1px);
 }
+
+.sc-trigger {
+	cursor: pointer;
+}
