--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -23,6 +23,7 @@
 @import 'components/buttons'; // Used to style buttons (can be turned off)
 @import 'components/cards'; // Used to style cards (can be turned off)
 @import 'components/chips'; // Used to style chips (can be turned off)
+@import 'components/data-tables'; // Used to style tables (can be turned off)
 @import 'components/dialogs'; // Used to style dialog (can be turned off)
 @import 'components/expansion-panels'; // Used to style expansion panels (can be turned off)
 //@import 'components/drawer'; // Navigation drawer (can be turned off)
@@ -35,7 +36,6 @@
 @import 'components/sliders'; // Used to style sliders (can be turned off)
 @import 'components/snackbars'; // Used to style snackbars and toasts (can be turned off)
 @import 'components/steppers'; // Used to style steppers (can be turned off)
-@import 'components/tables'; // Used to style tables (can be turned off)
 @import 'components/tabs'; // Used to style tabs (can be turned off)
 @import 'components/textfields'; // Used to style input (can be turned off)
 @import 'components/tooltips'; // Used to style tooltips (can be turned off)
