--- a/stylesheets/scss/components/_navigation-drawer.scss
+++ b/stylesheets/scss/components/_navigation-drawer.scss
@@ -13,6 +13,8 @@ $drawer-profile-img: rem-calc(40px);
 $drawer-profile-top: $drawer-padding;
 $drawer-profile-content-height: rem-calc(56px);
 $drawer-profile-bottom-padding: rem-calc(8px);
+$drawer-profile-scrim: to top, rgba($grey-900, 0.4) 15%, rgba($white, 0) 33%;
+//$drawer-profile-height: #{$drawer-padding} + #{$drawer-profile-img} + #{$drawer-profile-content-height} + #{$drawer-profile-bottom-padding};
 
 .sc-drawer {
 	position: fixed;
@@ -58,122 +60,179 @@ $drawer-profile-bottom-padding: rem-calc(8px);
 		}
 	}
 
-	@media #{$medium-up} {
-		&-permanent {
-			&-full-height {
-				top: 0;
-				border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-				z-index: 3;
+	&-permanent-full-height, &-permanent-clipped, &-permanent-floating, &-persistent, &-temporary {
+		margin: 0 0 0 -102%;
+		@include transition(margin $transition-small-duration $basic-transition);
 
-				.sc-drawer-header {
-					border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-					height: $appbar-small-height;
+		@media #{$medium-only} {
+			@include transition(margin $transition-medium-duration $basic-transition);
+		}
 
-					@media #{$medium-only} {
-						height: $appbar-medium-height;
-					}
+		@media #{$medium-up} {
+			margin: 0;
+			@include transition(margin $transition-large-duration $basic-transition);
+		}
 
-					@media #{$medium-up} {
-						height: $appbar-large-height;
-					}
-
-					&:hover {
-						background: none;
-					}
-				}
-			}
-
-			&-clipped {
-				top: $appbar-small-height;
-				z-index: 1;
-				border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-
-				@media #{$medium-only} {
-					top: $appbar-medium-height;
-				}
-
-				@media #{$medium-up} {
-					top: $appbar-large-height;
-				}
-
-				li:first-of-type {
-					margin: $drawer-profile-bottom-padding 0 0 0;
-				}
-			}
-
-			&-floating {
-				top: $appbar-small-height;
-				z-index: 1;
-
-				@media #{$medium-only} {
-					top: $appbar-medium-height;
-				}
-
-				@media #{$medium-up} {
-					top: $appbar-large-height;
-				}
-
-				li:first-of-type {
-					margin: $drawer-profile-bottom-padding 0 0 0;
-				}
-			}
+		&.sc-expanded {
+			margin: 0;
 		}
 	}
 
-	@media #{$small-up} {
-		&-persistent {
-			margin: 0 0 0 -102%;
-			top: 0;
-			border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-			z-index: 3;
-			@include transition(margin $transition-small-duration $basic-transition);
+	.sc-drawer-header {
+		position: relative;
+
+		&:hover {
+			background: none;
+		}
+	}
+
+	.sc-drawer-header .sc-drawer-profile-more {
+		ul {
+			display: none;
+			top: calc(#{$drawer-item-height} * -1);
+			left: calc((#{$drawer-icon-size} / 2) * -1);
+			padding: rem-calc(8px) 0;
+			@include material-shadow(2);
+			background: $white;
+			@include border-radius(rem-calc(2px));
+			position: relative;
+			z-index: 4;
+			visibility: hidden;
+			@include opacity(0);
+			max-height: 0;
+			width: 100%;
+			margin: rem-calc(16px);
+			@include transition(visibility $transition-small-duration $basic-transition unquote(',')
+								opacity $transition-small-duration $basic-transition unquote(',')
+								max-height $transition-small-duration $basic-transition);
+
+			@media #{$small-up} {
+				margin: rem-calc(24px);
+			}
 
 			@media #{$medium-only} {
-				@include transition(margin $transition-medium-duration $basic-transition);
+				@include transition(visibility $transition-medium-duration $basic-transition unquote(',')
+									opacity $transition-medium-duration $basic-transition unquote(',')
+									max-height $transition-medium-duration $basic-transition);
 			}
 
 			@media #{$medium-up} {
-				@include transition(margin $transition-large-duration $basic-transition);
+				@include transition(visibility $transition-large-duration $basic-transition unquote(',')
+									opacity $transition-large-duration $basic-transition unquote(',')
+									max-height $transition-large-duration $basic-transition);
 			}
 
-			.sc-drawer-header {
-				position: relative;
-				height: $appbar-small-height;
-				line-height: $appbar-small-height;
-				margin: 0 0 $drawer-profile-bottom-padding 0;
-				border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-
-				@media #{$medium-only} {
-					height: $appbar-medium-height;
-					line-height: $appbar-medium-height;
-				}
-
-				@media #{$medium-up} {
-					height: $appbar-large-height;
-					line-height: $appbar-large-height;
-				}
+			li {
+				height: $drawer-item-height;
+				font-size: rem-calc(16px);
+				padding: 0 rem-calc(16px) rem-calc(20px) rem-calc(16px);
 
 				&:hover {
 					background: none;
 				}
+			}
+		}
 
-				> * {
-					float: left;
+		&.sc-expanded {
+			ul {
+				display: block;
+				visibility: visible;
+				@include opacity(1);
+				max-height: 100%;
+			}
+		}
+	}
+
+	&-permanent {
+		&-full-height {
+			top: 0;
+			border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+			z-index: 3;
+
+			.sc-drawer-header {
+				padding: rem-calc(16px) rem-calc(16px) rem-calc(8px) rem-calc(16px);
+				border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+				height: $appbar-small-height;
+
+				@media #{$medium-only} {
+					height: $appbar-medium-height;
 				}
 
-				.sc-drawer-profile-img {
-					@include square($drawer-icon-size);
-					margin: 0 calc(#{rem-calc(72px)} - #{$drawer-icon-size} - #{$drawer-padding}) 0 0;
-					@include border-radius(50%);
-					border: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
-					top: 50%;
-					position: inherit;
-					@include transform(translate(0, -50%));
+				@media #{$medium-up} {
+					height: $appbar-large-height;
 				}
 			}
+		}
 
-			&.sc-expanded {
-				margin: 0;
+		&-clipped {
+			top: $appbar-small-height;
+			z-index: 1;
+			border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+
+			@media #{$medium-only} {
+				top: $appbar-medium-height;
+			}
+
+			@media #{$medium-up} {
+				top: $appbar-large-height;
+			}
+
+			li:first-of-type {
+				margin: $drawer-profile-bottom-padding 0 0 0;
+			}
+		}
+
+		&-floating {
+			top: $appbar-small-height;
+			z-index: 1;
+
+			@media #{$medium-only} {
+				top: $appbar-medium-height;
+			}
+
+			@media #{$medium-up} {
+				top: $appbar-large-height;
+			}
+
+			li:first-of-type {
+				margin: $drawer-profile-bottom-padding 0 0 0;
+			}
+		}
+	}
+
+	&-persistent {
+		top: 0;
+		border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+		z-index: 3;
+
+		.sc-drawer-header {
+			height: $appbar-small-height;
+			line-height: $appbar-small-height;
+			margin: 0 0 $drawer-profile-bottom-padding 0;
+			border-bottom: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+
+			@media #{$medium-only} {
+				height: $appbar-medium-height;
+				line-height: $appbar-medium-height;
+			}
+
+			@media #{$medium-up} {
+				height: $appbar-large-height;
+				line-height: $appbar-large-height;
+			}
+
+			> * {
+				float: left;
+			}
+
+			.sc-drawer-profile-img {
+				@include square($drawer-icon-size);
+				margin: 0 calc(#{rem-calc(72px)} - #{$drawer-icon-size} - #{$drawer-padding}) 0 0;
+				@include border-radius(50%);
+				border: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+				top: 50%;
+				position: inherit;
+				@include transform(translate(0, -50%));
 			}
 		}
 	}
@@ -253,54 +312,80 @@ $drawer-profile-bottom-padding: rem-calc(8px);
 		}
 	 }*/
 
-	@media #{$medium-down} {
-		&-temporary {
-			top: 0;
-			z-index: 3;
-			@include material-shadow(16);
 
-			.sc-drawer-header {
-				padding: 0 0 $drawer-profile-bottom-padding 0;
-				height: calc(#{$drawer-padding} + #{$drawer-profile-img} + #{$drawer-profile-content-height} + #{$drawer-profile-bottom-padding});
+	&-temporary {
+		top: 0;
+		z-index: 3;
+		@include material-shadow(16);
 
-				.sc-drawer-profile-background {
-					top: 0;
-					left: 0;
-					width: 100%;
-				}
+		.sc-drawer-header {
+			padding: 0 0 $drawer-profile-bottom-padding 0;
+			margin: 0 0 $drawer-profile-bottom-padding 0;
+			//height: $drawer-profile-height;
 
-				.sc-drawer-profile-background, .sc-drawer-profile-img, .sc-drawer-profile-name, .sc-drawer-profile-email {
-					position: absolute;
-				}
-
-				.sc-drawer-profile-img {
-					top: $drawer-padding;
-					left: $drawer-padding;
-					@include square($drawer-profile-img);
-					@include border-radius(50%);
-				}
-
-				.sc-drawer-profile-name, .sc-drawer-profile-email {
-					line-height: calc(#{$drawer-profile-content-height} / 2);
-					left: $drawer-padding;
-					height: calc(#{$drawer-profile-content-height} / 2);
-					color: $white;
-				}
-
-				.sc-drawer-profile-name {
-					top: calc(#{$drawer-profile-img} + #{$drawer-padding});
-					font-size: rem-calc(14px);
-					font-weight: 500;
-					right: 0;
-				}
-
-				.sc-drawer-profile-email {
-					top: calc(#{$drawer-profile-img} + #{$drawer-padding} + (#{$drawer-profile-content-height} / 2));
-					font-size: rem-calc(14px);
-					font-weight: 400;
-					right: rem-calc(24px);
-				}
+			.sc-drawer-profile-background {
+				top: 0;
+				left: 0;
+				width: 100%;
 			}
+
+			.sc-scrim {
+				background: -moz-linear-gradient($drawer-profile-scrim);
+				background: -webkit-linear-gradient($drawer-profile-scrim);
+				background: linear-gradient($drawer-profile-scrim);
+				bottom: 0;
+				content: '';
+				left: 0;
+				position: absolute;
+				right: 0;
+				top: 0;
+				margin: 0 0 -#{$drawer-profile-bottom-padding} 0;
+			}
+
+			.sc-drawer-profile-background, .sc-drawer-profile-img, .sc-drawer-profile-name, .sc-drawer-profile-email, .sc-drawer-profile-more {
+				position: absolute;
+			}
+
+			.sc-drawer-profile-img {
+				top: $drawer-padding;
+				left: $drawer-padding;
+				@include square($drawer-profile-img);
+				@include border-radius(50%);
+			}
+
+			.sc-drawer-profile-name, .sc-drawer-profile-email {
+				line-height: calc(#{$drawer-profile-content-height} / 2);
+				left: $drawer-padding;
+				height: calc(#{$drawer-profile-content-height} / 2);
+				color: $white;
+			}
+
+			.sc-drawer-profile-name {
+				top: calc(#{$drawer-profile-img} + #{$drawer-padding});
+				font-size: rem-calc(14px);
+				font-weight: 500;
+				right: 0;
+			}
+
+			.sc-drawer-profile-email {
+				top: calc(#{$drawer-profile-img} + #{$drawer-padding} + (#{$drawer-profile-content-height} / 2));
+				font-size: rem-calc(14px);
+				font-weight: 400;
+				right: calc(#{$drawer-profile-content-height} + #{$drawer-padding});
+			}
+
+			.sc-drawer-profile-more {
+				@include square($drawer-profile-content-height);
+				line-height: $drawer-profile-content-height;
+				right: $drawer-padding;
+				top: calc(#{$drawer-profile-img} + #{$drawer-padding} + #{$drawer-profile-content-height});
+				text-align: right;
+				color: $white;
+			}
+		}
+
+		&.sc-expanded {
+			margin: 0;
 		}
 	}
 
